--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="no-js">
+<html lang="en" class="no-js" xmlns="http://www.w3.org/1999/html">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>Horizontal Timeline | CodyHouse</title>
+	<title>架构师成长之路</title>
 </head>
 <body>
 <section class="cd-horizontal-timeline">
@@ -18,17 +18,24 @@
 		<div class="events-wrapper">
 			<div class="events">
 				<ol>
-					<li><a href="#0" data-date="16/01/2014" class="selected">16 Jan</a></li>
-					<li><a href="#0" data-date="28/02/2014">28 Feb</a></li>
-					<li><a href="#0" data-date="20/04/2014">20 Mar</a></li>
-					<li><a href="#0" data-date="20/05/2014">20 May</a></li>
-					<li><a href="#0" data-date="09/07/2014">09 Jul</a></li>
-					<li><a href="#0" data-date="30/08/2014">30 Aug</a></li>
-					<li><a href="#0" data-date="15/09/2014">15 Sep</a></li>
-					<li><a href="#0" data-date="01/11/2014">01 Nov</a></li>
-					<li><a href="#0" data-date="10/12/2014">10 Dec</a></li>
-					<li><a href="#0" data-date="19/01/2015">29 Jan</a></li>
-					<li><a href="#0" data-date="03/03/2015">3 Mar</a></li>
+					<li><a href="#0" data-date="01/07/2020" class="selected">20-07</a></li>
+					<li><a href="#0" data-date="01/08/2020">20-08</a></li>
+					<li><a href="#0" data-date="01/09/2020">20-09</a></li>
+					<li><a href="#0" data-date="01/10/2020">20-10</a></li>
+					<li><a href="#0" data-date="01/11/2020">20-11</a></li>
+					<li><a href="#0" data-date="01/12/2020">20-12</a></li>
+					<li><a href="#0" data-date="01/01/2021">21-01</a></li>
+					<li><a href="#0" data-date="01/02/2021">21-02</a></li>
+					<li><a href="#0" data-date="01/03/2021">21-03</a></li>
+					<li><a href="#0" data-date="01/04/2021">21-04</a></li>
+					<li><a href="#0" data-date="01/05/2021">21-05</a></li>
+					<li><a href="#0" data-date="01/06/2021">21-06</a></li>
+					<li><a href="#0" data-date="01/07/2021">21-07</a></li>
+					<li><a href="#0" data-date="01/08/2021">21-08</a></li>
+					<li><a href="#0" data-date="01/09/2021">21-09</a></li>
+					<li><a href="#0" data-date="01/10/2021">21-10</a></li>
+					<li><a href="#0" data-date="01/11/2021">21-11</a></li>
+					<li><a href="#0" data-date="01/12/2021">21-12</a></li>
 				</ol>
 
 				<span class="filling-line" aria-hidden="true"></span>
@@ -43,55 +50,67 @@
 
 	<div class="events-content">
 		<ol>
-			<li class="selected" data-date="16/01/2014">
-				<h2>Horizontal Timeline</h2>
-				<em>January 16th, 2014</em>
-				<p>	
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+			<li class="selected" data-date="01/07/2020">
+				<h2>2020-07 学习计划</h2>
+				<em>2020-07</em>
+				<p>
+					1、Java技术栈(DB,Cache,MQ)    工作日 1 - 2 小时，周末 2 小时<br>
+					2、CSAPP      				工作日 1     小时，周末 2 小时<br>
+					3、算法4       				工作日 1     小时，周末 2 小时<br>
 				</p>
 			</li>
 
-			<li data-date="28/02/2014">
-				<h2>Event title here</h2>
-				<em>February 28th, 2014</em>
-				<p>	
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+			<li data-date="01/08/2020">
+				<h2>2020-08 学习计划</h2>
+				<em>2020-08</em>
+				<p>
+					1、Java技术栈(DB,Cache,MQ)    工作日 1 - 2 小时，周末 2 小时<br>
+					2、CSAPP      				工作日 1     小时，周末 2 小时<br>
+					3、算法4       				工作日 1     小时，周末 2 小时<br>
 				</p>
 			</li>
 
-			<li data-date="20/04/2014">
-				<h2>Event title here</h2>
-				<em>March 20th, 2014</em>
-				<p>	
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+			<li data-date="01/09/2020">
+				<h2>2020-09 学习计划</h2>
+				<em>2020-09</em>
+				<p>
+					1、Java技术栈(DB,Cache,MQ)    工作日 1 - 2 小时，周末 2 小时<br>
+					2、CSAPP      				工作日 1     小时，周末 2 小时<br>
+					3、算法4       				工作日 1     小时，周末 2 小时<br>
 				</p>
 			</li>
 
-			<li data-date="20/05/2014">
-				<h2>Event title here</h2>
-				<em>May 20th, 2014</em>
-				<p>	
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+			<li data-date="01/10/2020">
+				<h2>2020-10 学习计划</h2>
+				<em>2020-10</em>
+				<p>
+					1、Java技术栈(DB,Cache,MQ)    工作日 1 - 2 小时，周末 2 小时<br>
+					2、CSAPP      				工作日 1     小时，周末 2 小时<br>
+					3、算法4       				工作日 1     小时，周末 2 小时<br>
 				</p>
 			</li>
 
-			<li data-date="09/07/2014">
-				<h2>Event title here</h2>
-				<em>July 9th, 2014</em>
-				<p>	
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+			<li data-date="01/11/2020">
+				<h2>2020-11 学习计划</h2>
+				<em>2020-11</em>
+				<p>
+					1、Java技术栈(DB,Cache,MQ)    工作日 1 - 2 小时，周末 2 小时<br>
+					2、CSAPP 					工作日 1     小时，周末 2 小时<br>
+					3、算法4       				工作日 1     小时，周末 2 小时<br>
 				</p>
 			</li>
 
-			<li data-date="30/08/2014">
-				<h2>Event title here</h2>
-				<em>August 30th, 2014</em>
-				<p>	
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+			<li data-date="01/12/2020">
+				<h2>2020-12 学习计划</h2>
+				<em>2020-12</em>
+				<p>
+					1、Java技术栈(DB,Cache,MQ)    工作日 1 - 2 小时，周末 2 小时<br>
+					2、CSAPP      				工作日 1     小时，周末 2 小时<br>
+					3、算法4       				工作日 1     小时，周末 2 小时<br>
 				</p>
 			</li>
 
-			<li data-date="15/09/2014">
+			<li data-date="01/01/2021">
 				<h2>Event title here</h2>
 				<em>September 15th, 2014</em>
 				<p>	
@@ -99,7 +118,7 @@
 				</p>
 			</li>
 
-			<li data-date="01/11/2014">
+			<li data-date="01/02/2021">
 				<h2>Event title here</h2>
 				<em>November 1st, 2014</em>
 				<p>	
@@ -107,7 +126,7 @@
 				</p>
 			</li>
 
-			<li data-date="10/12/2014">
+			<li data-date="01/03/2021">
 				<h2>Event title here</h2>
 				<em>December 10th, 2014</em>
 				<p>	
@@ -115,7 +134,7 @@
 				</p>
 			</li>
 
-			<li data-date="19/01/2015">
+			<li data-date="01/04/2021">
 				<h2>Event title here</h2>
 				<em>January 19th, 2015</em>
 				<p>	
@@ -123,10 +142,66 @@
 				</p>
 			</li>
 
-			<li data-date="03/03/2015">
+			<li data-date="01/05/2021">
 				<h2>Event title here</h2>
 				<em>March 3rd, 2015</em>
 				<p>	
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+				</p>
+			</li>
+
+			<li data-date="01/06/2021">
+				<h2>Event title here</h2>
+				<em>September 15th, 2014</em>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+				</p>
+			</li>
+
+			<li data-date="01/07/2021">
+				<h2>Event title here</h2>
+				<em>November 1st, 2014</em>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+				</p>
+			</li>
+
+			<li data-date="01/08/2021">
+				<h2>Event title here</h2>
+				<em>December 10th, 2014</em>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+				</p>
+			</li>
+
+			<li data-date="01/09/2021">
+				<h2>Event title here</h2>
+				<em>January 19th, 2015</em>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+				</p>
+			</li>
+
+			<li data-date="01/10/2021">
+				<h2>Event title here</h2>
+				<em>March 3rd, 2015</em>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+				</p>
+			</li>
+
+			<li data-date="01/11/2021">
+				<h2>Event title here</h2>
+				<em>January 19th, 2015</em>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+				</p>
+			</li>
+
+			<li data-date="01/12/2021">
+				<h2>Event title here</h2>
+				<em>March 3rd, 2015</em>
+				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
 				</p>
 			</li>
